--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         }
         return true;
     }
-    terminalInput.focus();
+    //terminalInput.focus();
     //socket.emit('sioin', 'set users:leto "{name: leto, planet: dune, likes: [spice]}"');
     //socket.emit('sioin', 'get users:leto');
 </script>
